--- a/website/templates/BrainStrokeImageForm.html
+++ b/website/templates/BrainStrokeImageForm.html
@@ -32,7 +32,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Upload Brain Stroke Image</h1>
+        <h1>Upload CT Scan Image</h1>
         <form id="brain-stroke-image-form" enctype="multipart/form-data">
             <label for="image_upload">Upload Image:</label>
             <input type="file" id="image_upload" name="image" accept="image/*" required>
